トップページをつくった

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -17,7 +17,7 @@ html.bg-slate-50
     = stylesheet_link_tag 'application', 'data-turbo-track': 'reload'
     = javascript_importmap_tags
 
-  body.max-w-screen-md.mx-auto.h-screen.flex.flex-col.bg-white
+  body.max-w-screen-md.mx-auto.min-h-screen.flex.flex-col.bg-white
     header
       #flash.fixed.top-0.left-0.w-full.z-50
         = render 'shared/flash'
