--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,9 +19,9 @@ html.bg-slate-50
 
   body.max-w-screen-md.mx-auto.min-h-screen.flex.flex-col.bg-white
     header
-      #flash.fixed.top-0.left-0.w-full.z-50
+      #flash.fixed.top-5.left-1/2.-translate-x-1/2.z-50.space-y-4
         = render 'shared/flash'
-      #toast.fixed.top-5.left-1/2.transform.-translate-x-1/2.z-50.space-y-4
+      #toast.fixed.top-5.left-1/2.-translate-x-1/2.z-50.space-y-4
         = render 'shared/toast'
       - unless current_page?(root_path)
         = render 'layouts/header/main'
