ランキング画面でエントリーボタンが表示されないようにした

--- a/app/views/contests/show.html.slim
+++ b/app/views/contests/show.html.slim
@@ -16,13 +16,6 @@ h1.text-2xl.font-bold.text-center.mt-4 = @contest.name
                               'w-32 h-10 leading-10 px-2 font-bold text-center')
 
   - if current_page?(contest_path(@contest))
-    = render 'entries/thumbnail_list'
+    = render 'contests/all_entries'
   - elsif current_page?(ranking_contest_path(@contest))
     = render 'contests/ranking'
-
-- if current_page?(contest_path(@contest))
-  = link_to new_contest_entry_path(@contest),
-    class: 'fixed bottom-14 left-1/2 transform -translate-x-1/2 \
-            w-12 h-12 rounded-full bg-white text-black shadow-lg \
-            z-50 flex items-center justify-center leading-none' do
-    i.fas.fa-plus
