アクセントカラーをシアンに変更

--- a/app/views/contests/invite.html.slim
+++ b/app/views/contests/invite.html.slim
@@ -19,8 +19,8 @@
           data: { controller: 'clipboard',
                   action: 'clipboard#copy',
                   clipboard_url_value: @invite_url },
-          class: 'bg-blue-500 text-white font-bold py-3 px-4 \
-                  rounded-full hover:bg-blue-600 shadow-md'
+          class: 'bg-cyan-500 text-white font-bold py-3 px-4 \
+                  rounded-full hover:bg-cyan-600 shadow-md'
 
   p.mt-6.text-center
     = link_to 'キャンセル', edit_contest_path(@contest),
