--- a/app/views/contests/_form.html.slim
+++ b/app/views/contests/_form.html.slim
@@ -11,7 +11,7 @@
         class: 'text-base font-medium text-gray-700 text-right \
                         pr-2 flex-shrink-0 w-32'
       = f.text_field :name, class: 'block w-full border-gray-300 rounded-md \
-                                    focus:ring-blue-500 focus:border-blue-500'
+                                    focus:ring-cyan-500 focus:border-cyan-500'
 
     .mb-4.flex.items-center
       = f.label :deadline, t('activerecord.attributes.contest.deadline'),
@@ -19,15 +19,15 @@
                         pr-2 flex-shrink-0 w-32'
       = f.date_field :deadline,
         class: 'block w-30 border-gray-300 rounded-md \
-                              focus:ring-blue-500 focus:border-blue-500'
+                              focus:ring-cyan-500 focus:border-cyan-500'
       .ml-2 まで
 
     .flex.justify-center
       - if @contest.new_record?
         = f.submit t('helpers.submit.contest.create'),
-          class: 'bg-blue-500 hover:bg-blue-600 text-white \
+          class: 'bg-cyan-500 hover:bg-cyan-600 text-white \
                             font-bold py-2 px-4 rounded-full'
       - else
         = f.submit '更新する',
-          class: 'bg-blue-500 hover:bg-blue-600 \
+          class: 'bg-cyan-500 hover:bg-cyan-600 \
                            text-white font-bold py-2 px-4 rounded-full'
