--- a/app/views/entries/_show.html.slim
+++ b/app/views/entries/_show.html.slim
@@ -23,9 +23,9 @@
           remote: true,
           data: { action: 'click->modal#close' },
           class: 'flex items-center justify-center w-12 h-12 text-sm \
-                  font-medium text-white bg-blue-500 rounded-full shadow \
-                  hover:bg-blue-600 focus:outline-none \
-                  focus:ring-2 focus:ring-blue-300'
+                  font-medium text-white bg-cyan-500 rounded-full shadow \
+                  hover:bg-cyan-600 focus:outline-none \
+                  focus:ring-2 focus:ring-cyan-300'
 
     .flex.justify-between.items-center.mt-6
       - if @previous_entry
