--- a/app/views/layouts/header/_menu.html.slim
+++ b/app/views/layouts/header/_menu.html.slim
@@ -20,13 +20,13 @@
         user_contests_path(current_user),
         data: { dropdown_target: 'menuItem' },
         class: 'no-underline block p-4 bg-white hover:bg-slate-200 \
-                focus:ring-inset focus:ring-2 focus:ring-blue-500 \
+                focus:ring-inset focus:ring-2 focus:ring-cyan-500 \
                 focus:rounded-lg'
       = link_to t('views.layouts.user_menu.logout'),
         destroy_user_session_path,
         data: { turbo_method: :delete, dropdown_target: 'menuItem' },
         class: 'no-underline block p-4 bg-white hover:bg-slate-200 \
-                focus:ring-inset focus:ring-2 focus:ring-blue-500 \
+                focus:ring-inset focus:ring-2 focus:ring-cyan-500 \
                 focus:rounded-lg'
       = link_to t('views.layouts.user_menu.leave'),
         user_path(current_user),
@@ -34,5 +34,5 @@
                 turbo_method: :delete,
                 turbo_confirm: 'データをすべて削除して退会します。よろしいですか？' },
         class: 'no-underline block p-4 bg-white hover:bg-slate-200 \
-                focus:ring-inset focus:ring-2 focus:ring-blue-500 \
+                focus:ring-inset focus:ring-2 focus:ring-cyan-500 \
                 focus:rounded-lg'
