--- a/app/views/shared/_contest_selection.html.slim
+++ b/app/views/shared/_contest_selection.html.slim
@@ -11,7 +11,7 @@
     data-action='dropdown#toggle:stop'
     class='flex items-center text-lg text-gray-700 font-medium \
            bg-white px-4 py-2 rounded-md hover:ring-2 \
-           focus:outline-none focus:ring-2 focus:ring-blue-500'
+           focus:outline-none focus:ring-2 focus:ring-cyan-500'
   )
     - if @selected_contest_name.present?
       = "#{@selected_contest_name} ▼"
@@ -27,11 +27,11 @@
         contest_path(contest),
         data: { dropdown_target: 'menuItem' },
         class: 'no-underline px-4 py-2 text-gray-700 \
-        hover:bg-blue-500 hover:text-white \
-        focus:ring-inset focus:ring-2 focus:ring-blue-500 focus:rounded-lg'
+        hover:bg-slate-200 \
+        focus:ring-inset focus:ring-2 focus:ring-cyan-500 focus:rounded-lg'
     = link_to t('views.layouts.header.contest_index'),
       user_contests_path(current_user),
       data: { dropdown_target: 'menuItem' },
       class: 'no-underline px-4 py-2 text-gray-700 \
-      hover:bg-blue-500 hover:text-white \
-      focus:ring-inset focus:ring-2 focus:ring-blue-500 focus:rounded-lg'
+      hover:bg-slate-200 \
+      focus:ring-inset focus:ring-2 focus:ring-cyan-500 focus:rounded-lg'
