--- a/app/views/entries/_thumbnail_list.html.slim
+++ b/app/views/entries/_thumbnail_list.html.slim
@@ -6,14 +6,14 @@
     .modal-content data-modal-target="content"
 
   - @thumbnail_data.each do |thumbnail_link, entry_id, score|
+    = turbo_frame_tag "entry_#{entry_id}"
     .relative
       - entries_show_url = contest_entry_path(@contest.id, entry_id)
       = button_tag type: 'button',
         data: { action: 'click->modal#open',
-                modal_entries_show_url_value: entries_show_url },
+          modal_entries_show_url_value: entries_show_url },
         class: 'thumbnail-button text-white font-bold py-2 px-4 rounded'
-        = image_tag thumbnail_link,
-          alt: t('views.entries.alt_text'),
-          class: 'w-full h-auto'
-
+      = image_tag thumbnail_link,
+        alt: t('views.entries.alt_text'),
+        class: 'w-full h-auto'
       = render 'entries/score', entry_id: entry_id, score: score
