--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -1,7 +1,12 @@
-h1 = t('views.entries.new.entry_photos')
-= link_to t('views.entries.new.to_contest_page'), contest_path(@contest)
+.bg-gray-100.px-4.py-3.flex.justify-between.items-center.border-none
+  h1.text-xl.sm:text-2xl.font-bold.text-black
+    = t('views.entries.new.entry_photos')
 
-div(
+  = link_to t('views.entries.new.to_contest_page'), contest_path(@contest),
+    class: 'bg-gray-300 text-gray-700 hover:bg-gray-400 hover:text-black \
+            px-2 py-2 rounded text-sm sm:text-lg font-semibold'
+
+.mt-6(
   data-controller='file-entry'
   data-file-entry-entries-create-path-value=contest_entries_path
 )
@@ -11,7 +16,7 @@ div(
                  dragleave->file-entry#dragLeave \
                  drop->file-entry#drop'
   )
-    p.hidden.sm:block.text-gray-500.text-center
+    p.hidden.sm:block.text-gray-500.text-center.text-sm
       = t('views.entries.new.drag_and_drop_to_add')
 
     input#file-input.hidden(
@@ -19,18 +24,27 @@ div(
       data-file-entry-target='fileInput'
       data-action='change->file-entry#addFiles'
     )
-    .preview-container data-file-entry-target='preview'
+    .preview-container.mt-4 data-file-entry-target='preview'
 
-  .sm:hidden
-    label
-      | 画像を選択してください
+  .sm:hidden.mt-6
+    label(
+      class="block w-full h-14 bg-white text-slate-500 font-bold \
+             text-lg text-center border border-slate-400 rounded-lg \
+             flex items-center justify-center cursor-pointer transition"
+    )
+      i.fa-solid.fa-image.text-gray-500.mr-2.text-2xl
+      | 画像を選ぶ
       input#mobile-file-input.hidden(
         type='file'
+        accept="image/*"
         data-file-entry-target='fileInput'
         data-action='change->file-entry#addFiles'
       )
 
-  button(
-    data-action='click->file-entry#upload'
-  )
-    = t('views.entries.new.enter')
+  .flex.justify-center.items-center.mt-6
+    button(
+      class='w-full sm:w-auto bg-cyan-500 hover:bg-cyan-600 text-white \
+             font-bold py-3 px-6 rounded sm:rounded-full text-lg transition'
+      data-action='click->file-entry#upload'
+    )
+      = t('views.entries.new.enter')
