--- a/app/views/layouts/header/_menu.html.slim
+++ b/app/views/layouts/header/_menu.html.slim
@@ -12,7 +12,7 @@
       class: 'h-16 w-16 rounded-full object-cover'
   div(
     data-dropdown-target='menu'
-    class='hidden absolute top-8 right-0 mt-8 flex \
+    class='hidden absolute top-8 -right-3 mt-8 flex \
           w-screen rounded-md shadow-lg max-w-max'
   )
     .text-s.bg-white.rounded-lg.border-2.overflow-hidden.w-30.z-30
@@ -22,6 +22,18 @@
         class: 'no-underline block p-4 bg-white hover:bg-slate-200 \
                 focus:ring-inset focus:ring-2 focus:ring-cyan-500 \
                 focus:rounded-lg'
+      = link_to '利用規約',
+        terms_path,
+        data: { dropdown_target: 'menuItem' },
+        class: 'no-underline block p-4 bg-white hover:bg-slate-200 \
+                      focus:ring-inset focus:ring-2 focus:ring-cyan-500 \
+                      focus:rounded-lg'
+      = link_to 'プライバシーポリシー',
+        privacy_path,
+        data: { dropdown_target: 'menuItem' },
+        class: 'no-underline block p-4 bg-white hover:bg-slate-200 \
+                            focus:ring-inset focus:ring-2 focus:ring-cyan-500 \
+                            focus:rounded-lg'
       = link_to t('views.layouts.user_menu.logout'),
         destroy_user_session_path,
         data: { turbo_method: :delete, dropdown_target: 'menuItem' },
