--- a/app/views/contests/_ranking.html.slim
+++ b/app/views/contests/_ranking.html.slim
@@ -11,7 +11,8 @@
           tr
             td.p-2.text-lg.font-bold.text-right = "#{entry[:rank]}位"
             td.p-2.flex.justify-center.items-center
-              = image_tag entry[:thumbnail_link],
+              = image_tag \
+                thumbnail_contest_entry_path(@contest, entry[:entry_id]),
                 class: 'w-32 h-32 object-cover'
             td.p-2.text-lg.text-left = "#{entry[:total_score]}点"
   - else
