--- a/app/views/contests/show.html.slim
+++ b/app/views/contests/show.html.slim
@@ -1,4 +1,11 @@
-h1.text-2xl.font-bold.text-center.mt-4 = @contest.name
+.flex.justify-between.items-center.bg-gray-100.px-4.py-3
+  .overflow-hidden
+    h1.text-2xl.font-bold.my-2.truncate = @contest.name
+    p.text-base.text-gray-600 投票期日：#{@contest.deadline.strftime('%Y年%-m月%-d日')}
+
+  = link_to '編集', edit_contest_path(@contest),
+    class: 'bg-gray-300 text-gray-700 hover:bg-gray-400 hover:text-black \
+            py-2 w-20 text-center rounded text-lg font-semibold flex-shrink-0'
 
 = turbo_frame_tag 'content' do
   div class='flex justify-center items-center mt-6 \
