--- a/app/views/layouts/header/_main.html.slim
+++ b/app/views/layouts/header/_main.html.slim
@@ -1,8 +1,9 @@
-.flex.justify-between.items-center.px-6.py-4.bg-white.border-b.border-gray-200
+.flex.justify-between.items-center.p-4.bg-white.border-b.border-gray-200
   = link_to 'PixPick', root_path,
-    class: 'text-4xl font-bold text-black no-underline hover:text-gray-700'
+    class: 'text-3xl sm:text-4xl font-bold text-black no-underline \
+            hover:text-gray-700'
   - if current_user.present?
-    .ml-auto.flex.items-center.space-x-10
+    .ml-auto.flex.justify-end.items-center
       - if current_user.contests.any? && !@is_editing_contest
         = render 'shared/contest_selection'
       = render 'layouts/header/menu'
