--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -32,7 +32,7 @@
              text-lg text-center border border-slate-400 rounded-lg \
              flex items-center justify-center cursor-pointer transition"
     )
-      i.fa-solid.fa-image.text-gray-500.mr-2.text-2xl
+      i.fa-regular.fa-image.text-gray-500.mr-2.text-2xl
       | 画像を選ぶ
       input#mobile-file-input.hidden(
         type='file'
