使用するグレーの種類を統一した

--- a/app/views/contests/_all_entries.html.slim
+++ b/app/views/contests/_all_entries.html.slim
@@ -1,5 +1,5 @@
 - if @contest.deadline_passed?
-  .text-center.my-6.text-lg.font-semibold.text-gray-700
+  .text-center.my-6.text-lg.font-semibold.text-stone-700
     | このコンテストは投票を締め切りました。
     br
     | ランキングタブから投票結果をご確認ください。
