--- a/app/views/contests/_ranking.html.slim
+++ b/app/views/contests/_ranking.html.slim
@@ -2,7 +2,7 @@
   - if @ranked_entries.any?
     table.w-full.border-collapse
       thead
-        tr.bg-gray-100
+        tr.bg-stone-100
           th.text-right.p-2 順位
           th.p-2
           th.text-left.p-2 合計点
@@ -16,4 +16,4 @@
                 class: 'w-32 h-32 object-cover'
             td.p-2.text-lg.text-left = "#{entry[:total_score]}点"
   - else
-    p.text-center.text-gray-600 エントリーがありません。
+    p.text-center.text-stone-600 エントリーがありません。
