--- a/app/views/contests/edit.html.slim
+++ b/app/views/contests/edit.html.slim
@@ -13,7 +13,7 @@
     .w-3/4.flex.justify-end.items-center
       = link_to '新しい参加者を招待する',
         invite_contest_path(@contest),
-        class: 'bg-gray-300 hover:bg-gray-400 py-3 px-3 \
+        class: 'bg-stone-300 hover:bg-stone-400 py-3 px-3 \
                         rounded-full inline-block shadow-lg'
 
 .my-4.flex.justify-center
