--- a/app/views/entries/_thumbnail_list.html.slim
+++ b/app/views/entries/_thumbnail_list.html.slim
@@ -22,4 +22,4 @@
 
             = render 'entries/score', entry_id: entry_id, score: score
 - else
-  p.mt-8.text-center.text-gray-600 エントリーがありません。
+  p.mt-8.text-center.text-stone-600 エントリーがありません。
