--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -1,9 +1,9 @@
 .py-8.text-center
-  = image_tag 'logo.png', alt: 'PixPick ロゴ', class: 'mx-auto'
-  p.text-2xl.text-slate-800.font-bold.mt-8 みんなのベストショットを決めよう
+  = image_tag 'logo.png', alt: 'PixPickのロゴ', class: 'mx-auto'
+  p.text-2xl.text-stone-800.font-bold.mt-8 みんなのベストショットを決めよう
 
 .max-w-xl.mx-auto.px-4
-  p.text-gray-800.text-center
+  p.text-stone-800.text-center
     | PixPickは、家族や友人と一緒に、
     br
     | みんなが一番良いと思った写真を
@@ -14,21 +14,21 @@
 
   .mt-10.flex.justify-center.items-center.flex-col
     ul.list-none.list-inside.mt-4
-      li.text-gray-700
+      li.text-stone-700
         span.font-semibold 📌 コンテストごとに写真を共有
-        p.text-gray-600.text-sm
+        p.text-stone-600.text-sm
           | コンテストごとに、評価したい写真をお使いのデバイスから登録できます。
           br
           | 写真を登録したコンテストを家族や友人に共有しましょう。
-      li.text-gray-700.mt-4
+      li.text-stone-700.mt-4
         span.font-semibold 📌 写真を採点
-        p.text-gray-600.text-sm
+        p.text-stone-600.text-sm
           | 参加者が各自で写真に点数をつけることで、みんなの意見を反映します。
           br
           | 参加者同士で話し合う必要はありません。
-      li.text-gray-700.mt-4
+      li.text-stone-700.mt-4
         span.font-semibold 📌 ベストショットを選出
-        p.text-gray-600.text-sm
+        p.text-stone-600.text-sm
           | 投票期間内におけるみんなの評価を集計して、ランキング形式で表示します。
           br
           | 自分のペースで写真を評価しましょう。
