--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,5 +1,5 @@
 doctype html
-html.bg-slate-50
+html.bg-stone-200
   head
     title = content_for(:title) || 'Pix Pick'
     meta name="viewport" content="width=device-width,initial-scale=1"
