--- a/app/views/layouts/header/_main.html.slim
+++ b/app/views/layouts/header/_main.html.slim
@@ -1,4 +1,4 @@
-.flex.justify-between.items-center.p-4.bg-white.border-b.border-gray-200
+.flex.justify-between.items-center.p-4.bg-white.border-b.border-stone-200
   = link_to image_tag('wordmark.png',
                       alt: 'PixPickのワードマーク',
                       class: 'mb-2 w-28 sm:w-48'),
