--- a/app/views/participants/new.html.slim
+++ b/app/views/participants/new.html.slim
@@ -1,16 +1,16 @@
 .container.mx-auto.max-w-lg.p-6
-  p.text-2xl.font-bold.text-gray-800.mb-6.text-center
+  p.text-2xl.font-bold.text-stone-800.mb-6.text-center
     - if user_signed_in?
       | コンテストに参加する
     - else
       | ようこそPixPickへ！
 
-  p.text-lg.text-gray-700.leading-relaxed
+  p.text-lg.text-stone-700.leading-relaxed
     | あなたは以下のコンテストに招待されています。
     br
     | コンテスト名と投票期日をご確認の上、
 
-    span.font-bold.text-gray-800
+    span.font-bold.text-stone-800
       - if user_signed_in?
         | 「コンテストに参加する」ボタンを押していただくことで、
       - else
@@ -19,12 +19,12 @@
       | コンテストにご参加いただけます。
 
   .mt-6.text-center
-    p.font-bold.text-lg.text-gray-900.mb-2
-      span.text-gray-500 = 'コンテスト名 '
+    p.font-bold.text-lg.text-stone-900.mb-2
+      span.text-stone-500 = 'コンテスト名 '
       = @contest.name
 
-    p.font-bold.text-lg.text-gray-900
-      span.text-gray-500 = '投票期日 '
+    p.font-bold.text-lg.text-stone-900
+      span.text-stone-500 = '投票期日 '
       = "#{@contest.deadline.strftime('%Y/%m/%d')} まで"
 
   .mt-8.flex.justify-center.items-center.flex-col
