--- a/app/views/shared/_contest_selection.html.slim
+++ b/app/views/shared/_contest_selection.html.slim
@@ -9,7 +9,7 @@
 )
   button(
     data-action='dropdown#toggle:stop'
-    class='text-center text-base sm:text-lg text-gray-700 font-medium \
+    class='text-center text-base sm:text-lg text-stone-700 font-medium \
            bg-white px-2 sm:px-4 py-2 rounded-md truncate \
            hover:ring-2 focus:outline-none focus:ring-2 focus:ring-cyan-500'
   )
@@ -19,18 +19,18 @@
   div(
     data-dropdown-target='menu'
     class='hidden absolute top-8 right-0 mt-2 w-64 flex flex-col \
-           bg-white border border-gray-200 rounded-md shadow-lg z-50'
+           bg-white border border-stone-200 rounded-md shadow-lg z-50'
   )
     - @recent_contests.each do |contest|
       = link_to contest.name,
         contest_path(contest),
         data: { dropdown_target: 'menuItem' },
-        class: 'no-underline px-4 py-2 text-gray-700 truncate \
-        hover:bg-slate-200 \
+        class: 'no-underline px-4 py-2 text-stone-700 truncate \
+        hover:bg-stone-200 \
         focus:ring-inset focus:ring-2 focus:ring-cyan-500 focus:rounded-lg'
     = link_to t('views.layouts.header.contest_index'),
       user_contests_path(current_user),
       data: { dropdown_target: 'menuItem' },
-      class: 'no-underline px-4 py-2 text-gray-700 \
-      hover:bg-slate-200 \
+      class: 'no-underline px-4 py-2 text-stone-700 \
+      hover:bg-stone-200 \
       focus:ring-inset focus:ring-2 focus:ring-cyan-500 focus:rounded-lg'
