--- a/app/views/shared/_spinner.html.slim
+++ b/app/views/shared/_spinner.html.slim
@@ -1,3 +1,3 @@
 .flex.justify-center.items-center.flex-col
-  .w-8.h-8.border-4.border-gray-200.border-t-cyan-500.rounded-full.animate-spin
-  .mt-2.text-gray-500 Now Loading...
+  .w-8.h-8.border-4.border-stone-200.border-t-cyan-500.rounded-full.animate-spin
+  .mt-2.text-stone-500 Now Loading...
