--- a/app/views/layouts/header/_main.html.slim
+++ b/app/views/layouts/header/_main.html.slim
@@ -1,8 +1,14 @@
 .flex.justify-between.items-center.p-4.bg-white.border-b.border-stone-200
-  = link_to image_tag('wordmark.png',
-                      alt: 'PixPickのワードマーク',
-                      class: 'mb-2 w-28 sm:w-48'),
-            root_path
+  - if user_signed_in?
+    = link_to image_tag('wordmark.png',
+                        alt: 'PixPickのワードマーク',
+                        class: 'mb-2 w-28 sm:w-48'),
+              current_contest_or_contests_index_path(@contest, current_user)
+  - else
+    = link_to image_tag('wordmark.png',
+                        alt: 'PixPickのワードマーク',
+                        class: 'mb-2 w-28 sm:w-48'),
+              root_path
 
   - if current_user.present?
     .ml-auto.flex.justify-end.items-center
