ロゴ追加に合わせてヘッダーのレイアウトを調整した

--- a/app/views/layouts/header/_menu.html.slim
+++ b/app/views/layouts/header/_menu.html.slim
@@ -9,7 +9,7 @@
 )
   button data-action='dropdown#toggle:stop'
     = image_tag user_avatar_url, alt: 'ユーザーアイコン',
-      class: 'h-16 w-16 rounded-full object-cover'
+      class: 'h-14 w-14  sm:h-16 sm:w-16 rounded-full object-cover'
   div(
     data-dropdown-target='menu'
     class='hidden absolute top-8 -right-3 mt-8 flex \
