コミット74fb02cの変更漏れを追加

--- a/app/views/participants/new.html.slim
+++ b/app/views/participants/new.html.slim
@@ -38,4 +38,4 @@
 
   .mt-6.text-center
     = link_to 'トップページへ', root_path,
-      class: 'text-slate-700 hover:underline hover:underline-offset-4'
+      class: 'text-stone-700 hover:underline hover:underline-offset-4'
