--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,7 +31,7 @@ button {
 @media (min-width: 640px) {
     .drop-and-preview-zone {
         min-height: 400px;
-        border: 2px dashed #ccc;
+        border: 2px dashed rgb(214 211 209);
         border-radius: 10px;
     }
 }
