コンテスト一覧画面のデザインを整えた

--- a/app/views/contests/_all_entries.html.slim
+++ b/app/views/contests/_all_entries.html.slim
@@ -9,6 +9,7 @@
 = link_to new_contest_entry_path(@contest),
   data: { turbo_frame: '_top' },
   class: 'fixed bottom-14 left-1/2 transform -translate-x-1/2 \
-                  w-12 h-12 rounded-full bg-white text-black shadow-lg \
-                  z-50 flex items-center justify-center leading-none' do
+          w-12 h-12 rounded-full bg-white text-black shadow-lg \
+          z-50 flex items-center justify-center leading-none \
+          border border-stone-200' do
   i.fas.fa-plus
