--- a/app/views/contests/index.html.slim
+++ b/app/views/contests/index.html.slim
@@ -1,20 +1,26 @@
 .bg-stone-100.px-4.py-3.flex.justify-between.items-center.border-none
   h1.text-xl.sm:text-2xl.font-bold.text-black = t('views.contests.index.title')
 
-.m-4
+.m-4.overflow-x-auto
   - if @contests.any?
-    table.table-auto.w-full.border-collapse.border.border-stone-300
+    table.w-full.border-collapse.border.border-stone-300
       tbody
         - @contests.each do |contest|
           tr.hover:bg-stone-100
-            td.border.border-stone-300.px-0.py-0.max-w-md
-              = link_to contest_path(contest), class: "block h-full w-full px-4 py-3 text-stone-800 hover:underline hover:underline-offset-2 truncate" do
+            td.border.border-stone-300.px-0.py-0.max-w-64.sm:max-w-md
+              = link_to contest_path(contest),
+                class: 'block h-full w-full px-4 py-3 text-stone-800 \
+                        hover:underline hover:underline-offset-2 truncate' do
                 = contest.name
             td.border.border-stone-300.px-0.py-0.text-center
-              = link_to edit_contest_path(contest), class: "block h-full w-full px-4 py-3 text-stone-800 hover:underline hover:underline-offset-2" do
+              = link_to edit_contest_path(contest),
+                class: 'block h-full w-full px-4 py-3 text-stone-800 \
+                        hover:underline hover:underline-offset-2' do
                 | 編集
   - else
     p.text-stone-500.text-center = t('views.contests.index.no_contests')
 
 .mt-10.flex.justify-center.items-center
-  = link_to '新しいコンテストを作成', new_contest_path, class: "bg-white text-stone-800 border border-stone-200 shadow-lg px-4 py-3 rounded-full hover:bg-stone-100"
+  = link_to '新しいコンテストを作成', new_contest_path,
+    class: 'bg-white text-stone-800 border border-stone-200 shadow-lg \
+            px-4 py-3 rounded-full hover:bg-stone-100'
