--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,6 +16,7 @@ html.bg-stone-200
     = stylesheet_link_tag 'tailwind', 'inter-font', 'data-turbo-track': 'reload'
     = stylesheet_link_tag 'application', 'data-turbo-track': 'reload'
     = javascript_importmap_tags
+    = favicon_link_tag('favicon.ico')
 
   body.max-w-screen-md.mx-auto.min-h-screen.flex.flex-col.bg-white
     header
