エントリーに関する機能のGoogleDriveAPIを用いていた箇所をActiveStorageに置き換えた

--- a/app/views/contests/_ranking.html.slim
+++ b/app/views/contests/_ranking.html.slim
@@ -7,13 +7,12 @@
           th.p-2
           th.text-left.p-2 合計点
       tbody
-        - @ranked_entries.each do |entry|
+        - @ranked_entries.each do |ranked_entry|
           tr
-            td.p-2.text-lg.font-bold.text-right = "#{entry[:rank]}位"
+            td.p-2.text-lg.font-bold.text-right = "#{ranked_entry[:rank]}位"
             td.p-2.flex.justify-center.items-center
-              = image_tag \
-                thumbnail_contest_entry_path(@contest, entry[:entry_id]),
-                class: 'w-32 h-32 object-cover'
-            td.p-2.text-lg.text-left = "#{entry[:total_score]}点"
+              = image_tag ranked_entry[:entry].image.variant(:thumb),
+                class: 'w-48 max-h-48 object-contain'
+            td.p-2.text-lg.text-left = "#{ranked_entry[:total_score]}点"
   - else
     p.text-center.text-stone-600 エントリーがありません。
